--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "graphql": "^15.4.0",
     "ioredis": "^4.19.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
