--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-starter-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "GraphQL API",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -45,6 +45,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "graphql-redis-subscriptions": "^2.3.1",
     "ioredis": "^4.19.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
