--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "apollo"
   ],
   "scripts": {
-    "dev": "next dev",
+    "develop": "next dev",
     "build": "next build",
     "start": "next start",
     "generate:graphql": "graphql-codegen --config codegen.yml",
