--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:12
+FROM node:15.5
 
 WORKDIR /usr/src/app/server
 
 COPY package.json ./
+
 COPY yarn.lock ./
 
 RUN yarn
@@ -12,4 +13,5 @@ COPY . .
 ENV NODE_ENV development
 
 EXPOSE 8080
-CMD [ "yarn", "dev" ]
+
+CMD [ "yarn", "develop" ]
