--- a/server/Dockerfile.production
+++ b/server/Dockerfile.production
@@ -3,11 +3,13 @@ FROM node:12
 WORKDIR /usr/src/app/server
 
 COPY package.json ./
+
 COPY yarn.lock ./
 
 RUN yarn
 
 COPY . .
+
 COPY .env.production .env
 
 RUN yarn build
@@ -15,5 +17,7 @@ RUN yarn build
 ENV NODE_ENV production
 
 EXPOSE 8080
-CMD [ "node", "dist/index.js" ]
+
+CMD [ "yarn", "production" ]
+
 USER node
