--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
     "generate:env:types": "gen-env-types .env.local -o src/env.d.ts -e .",
     "tslint": "node_modules/.bin/tslint -c ./tslint.json './src/**/*.ts'",
     "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json './src/**/*.ts'",
-    "prettier:base": "prettier --write src/",
+    "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
   },
