--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,12 @@
     "start": "next start",
     "generate:graphql": "graphql-codegen --config codegen.yml",
     "generate:env:types": "gen-env-types .env.local -o src/env.d.ts -e .",
-    "tslint": "node_modules/.bin/tslint -c ./tslint.json './src/**/*.ts'",
-    "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json './src/**/*.ts'",
+    "tslint": "node_modules/.bin/tslint -c ./tslint.json \"./src/**/*.ts\"",
+    "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json \"./src/**/*.ts\"",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
+    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
+    "precommit": "npm run prettier:write"
   },
   "dependencies": {
     "@apollo/client": "^3.3.7",
@@ -49,6 +50,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "gen-env-types": "^1.0.5",
+    "husky": "^6.0.0",
     "prettier": "^2.0.5",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
