--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@types/uuid": "^8.3.0",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
