--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^16.9.46",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
