--- a/server/package.json
+++ b/server/package.json
@@ -71,7 +71,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "npm run precommit",
+      "prettier /src --write",
       "git add"
     ]
   }
