--- a/web/package.json
+++ b/web/package.json
@@ -51,20 +51,13 @@
     "@types/react": "^16.9.46",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
     "prettier": "^2.0.5",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run precommit"
     }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "npm run precommit",
-      "git add"
-    ]
   }
 }
