--- a/server/package.json
+++ b/server/package.json
@@ -34,12 +34,17 @@
     "@types/redis": "^2.8.28",
     "@types/sharp": "^0.27.1",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "dependencies": {
