--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "start": "next start",
     "generate:graphql": "graphql-codegen --config codegen.yml",
     "generate:env:types": "gen-env-types .env.local -o src/env.d.ts -e .",
-    "tslint": "node_modules/.bin/tslint -c ./tslint.json \"./src/**/*.ts\"",
+    "eslint": "eslint -c .eslintrc.js --ext .tsx ./src",
     "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json \"./src/**/*.ts\"",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
@@ -49,10 +49,15 @@
     "@types/apollo-upload-client": "^14.1.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
     "prettier": "^2.0.5",
-    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "husky": {
