better lint options

--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,11 @@
     "generate:migration:data": "npx typeorm migration:create -n gen-data",
     "generate:migration:tables": "npx typeorm migration:generate -n tables",
     "deploy": "./scripts/deploy.sh",
-    "tslint": "node_modules/.bin/tslint -c ./tslint.json \"./src/**/*.{ts, tsx}\"",
-    "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json \"./src/**/*.{ts, tsx}\"",
-    "prettier:base": "prettier --parser typescript",
-    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint -c .eslintrc.js --ext ts,tsx ./src",
+    "lint:fix": "eslint --fix --ext ts,tsx ./src",
+    "format:base": "prettier --parser typescript",
+    "format:check": "npm run format:base -- --list-different \"src/**/*.{ts,tsx}\"",
+    "format:write": "npm run format:base -- --write \"src/**/*.{ts,tsx}\"",
     "precommit": "npm run prettier:write"
   },
   "author": "",
@@ -37,9 +37,11 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^3.4.0",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
     "nodemon": "^2.0.6",
