--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,11 @@
     "start": "next start",
     "generate:graphql": "graphql-codegen --config codegen.yml",
     "generate:env:types": "gen-env-types .env.local -o src/env.d.ts -e .",
-    "eslint": "eslint -c .eslintrc.js --ext .tsx ./src",
-    "tslint:fix": "node_modules/.bin/tslint --fix -c ./tslint.json \"./src/**/*.ts\"",
-    "prettier:base": "prettier --parser typescript",
-    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint -c .eslintrc.js --ext ts,tsx ./src",
+    "lint:fix": "eslint --fix --ext ts,tsx ./src",
+    "format:base": "prettier --parser typescript",
+    "format:check": "npm run format:base -- --list-different \"src/**/*.{ts,tsx}\"",
+    "format:write": "npm run format:base -- --write \"src/**/*.{ts,tsx}\"",
     "precommit": "npm run prettier:write"
   },
   "dependencies": {
@@ -52,9 +52,11 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.3.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^3.4.0",
     "gen-env-types": "^1.0.5",
     "husky": "^6.0.0",
     "prettier": "^2.0.5",
